--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="project_card_container">
         <div class="project_card">
           <img
-            src="/img/project.png"
+            src="img/project.png"
             alt="minimal_enclosing_and_maximal_inscribed_triangles_within_a_convex_polygon"
           />
           <h2>Triangles in Convex Polygons for Collision Detection</h2>
