--- a/index.html
+++ b/index.html
@@ -117,18 +117,20 @@
     <section id="experience_sector" class="experience_education">
       <h3 class="centered">Education & Experience</h3>
       <div class="experience_container">
-        <div class="card left_slide">
+        <div class="card card_slide">
           <h4>2015-2023</h4>
           <p>
+            <br />
             University Of Ioannina School Of Engineering Department of Computer
             Science & Engineering
           </p>
         </div>
         <div class="ladder"></div>
-        <div class="card right_slide">
+        <div class="card card_slide">
           <h4>03/2022-04/2022</h4>
           <h3>Frontend Developer (internship)</h3>
           <p>
+            <br />
             Company: CodeWild - Software House Developed and maintained
             front-end components using HTML, CSS, JavaScript & WordPress
           </p>
@@ -166,6 +168,28 @@
               href="https://github.com/vagelispapp/convex-polygon-algorithms"
               target="_blank"
             >
+              <img src="img/github.png" alt="github icon" class="contact_icon"
+            /></a>
+          </div>
+        </div>
+        <div class="project_card">
+          <img
+            src="/img/merge_pdf.png"
+            alt="minimal_enclosing_and_maximal_inscribed_triangles_within_a_convex_polygon"
+          />
+          <h2>Pdf Merger</h2>
+          <p>
+            A lightweight and user-friendly desktop tool that automatically
+            merges all PDF files in the current folder using a graphical
+            interface — no coding or terminal required.
+          </p>
+          <div class="tags_container">
+            <div class="tag">Python</div>
+            <div class="tag">Tkinter</div>
+            <div class="tag">Script</div>
+          </div>
+          <div class="project_link">
+            <a href="https://github.com/vagelispapp/pdf_merger" target="_blank">
               <img src="img/github.png" alt="github icon" class="contact_icon"
             /></a>
           </div>
