--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
         </div>
         <div class="project_card">
           <img
-            src="/img/merge_pdf.png"
-            alt="minimal_enclosing_and_maximal_inscribed_triangles_within_a_convex_polygon"
+            src="img/merge_pdf.png"
+            alt="two_pdf_icons_merging_into_one"
           />
           <h2>Pdf Merger</h2>
           <p>
