--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="typewriter_container">
             <ul class="dynamic_text">
               <li><span>Web Developer</span></li>
-              <li><span>Software Developer</span></li>
+              <li><span>Software Developer&nbsp;</span></li>
             </ul>
           </div>
           <h1>Evangelos Pappas</h1>
@@ -175,7 +175,7 @@
         <div class="project_card">
           <img
             src="img/merge_pdf.png"
-            alt="two_pdf_icons_merging_into_one"
+            alt="minimal_enclosing_and_maximal_inscribed_triangles_within_a_convex_polygon"
           />
           <h2>Pdf Merger</h2>
           <p>
@@ -190,6 +190,28 @@
           </div>
           <div class="project_link">
             <a href="https://github.com/vagelispapp/pdf_merger" target="_blank">
+              <img src="img/github.png" alt="github icon" class="contact_icon"
+            /></a>
+          </div>
+        </div>
+        <div class="project_card">
+          <img
+            src="img/sorting_algorithm.png"
+            alt="a_sketch_of_sorting_file_system"
+          />
+          <h2>Auto Sort Files</h2>
+          <p>
+            A simple and user-friendly Windows executable that automatically
+            sorts files in the current folder into sub folders based on file
+            types.
+          </p>
+          <div class="tags_container">
+            <div class="tag">Python</div>
+            <div class="tag">Tkinter</div>
+            <div class="tag">Script</div>
+          </div>
+          <div class="project_link">
+            <a href="https://github.com/vagelispapp/auto_sort" target="_blank">
               <img src="img/github.png" alt="github icon" class="contact_icon"
             /></a>
           </div>
