--- a/index.html
+++ b/index.html
@@ -228,19 +228,25 @@
       <div class="hobbies_container">
         <div class="hobbie">
           <p class="hobbie_name">Driving</p>
-          <img src="img/car.png" alt="car icon" class="hobbie_icon" />
+          <div class="car">
+            <img src="img/car.png" alt="car icon" class="hobbie_icon car" />
+          </div>
         </div>
         <div class="hobbie">
           <p class="hobbie_name">Music</p>
-          <img src="img/headset.png" alt="headset icon" class="hobbie_icon" />
+          <div class="headset">
+            <img src="img/headset.png" alt="headset icon" class="hobbie_icon" />
+          </div>
         </div>
         <div class="hobbie">
           <p class="hobbie_name">BasketBall</p>
-          <img
-            src="img/basketball.png"
-            alt="basketball icon"
-            class="hobbie_icon"
-          />
+          <div class="basketball">
+            <img
+              src="img/basketball.png"
+              alt="basketball icon"
+              class="hobbie_icon"
+            />
+          </div>
         </div>
       </div>
     </section>
