--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
     <title>EPappasDev</title>
   </head>
   <body>
     <nav>
-      <h2>EPappas</h2>
+      <div class="logo"><a class='logo' href="#"><img src="img/logo.png" alt="personal_logo" /></div>
       <div class="hamburger"></div>
       <div class="nav_menu nav_pop">
         <a href="#">Home</a>
