--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link rel="icon" type="image/x-icon" href="img/logo.png" />
     <title>EPappasDev</title>
   </head>
   <body>
     <nav>
-      <div class="logo"><a class='logo' href="#"><img src="img/logo.png" alt="personal_logo" /></div>
+      <div class="logo">
+        <a href="#"><img src="img/logo.png" alt="personal_logo" /></a>
+      </div>
       <div class="hamburger"></div>
       <div class="nav_menu nav_pop">
         <a href="#">Home</a>
@@ -217,6 +219,14 @@
             /></a>
           </div>
         </div>
+      </div>
+      <div class="github_button">
+        <a
+          class="contact_btn"
+          href="https://github.com/vagelispapp"
+          target="_blank"
+          >More ></a
+        >
       </div>
       <div class="divider_container_personal">
         <div class="divider_back"></div>
